<resources>
    <string name="app_name">Football Score</string>
    <string name="teamA">Team A</string>
    <string name="teamB">Team B</string>
    <string name="touchdown">Touchdown\n+6</string>
    <string name="plusOne">+1</string>
    <string name="plusTwo">+2</string>
    <string name="fieldgoal">Fieldgoal\n+3</string>
    <string name="safety">Safety\n+2</string>
    <string name="reset">Reset</string>
    <string name="score">0</string>
</resources>
